[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eRCaGuy_PyColors"
version = "0.1.0"
description = "A Python module to add ANSI color and format codes to strings for terminal output"
readme = "README.md"
authors = [
    {name = "Gabriel Staples"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
keywords = ["ansi", "color", "terminal", "console", "formatting", "colorize", "print", "string"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/ElectricRCAircraftGuy/eRCaGuy_PyColors"
Repository = "https://github.com/ElectricRCAircraftGuy/eRCaGuy_PyColors"
Issues = "https://github.com/ElectricRCAircraftGuy/eRCaGuy_PyColors/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["eRCaGuy_PyColors*"]
